# Doczilla

./: README.md
Task-1/: CMakeLists.txt  main.cpp
Task-1/testbed/: file1.txt  file2.txt
Task-1/testbed/Folder1/: file1-1.txt
Task-1/testbed/Folder1/Folder2/: file2-1.txt
Task-1/testbed/Folder1/Folder3/: file3-1.txt
Task-2/client/: index.html  style.css
Task-2/client/src/: api.js  index.js  render.js
Task-2/server/: CMakeLists.txt  README.md  main.cpp
Task-3/client/: index.html  style.css
Task-3/client/src/: api.js  checkboxSVG.js  date.js  index.js  render.js
Task-3/server/: controllers.js  index.js  router.js
